# exemu

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.claude/skills/exemu-development-rules/: SKILL.md
.github/workflows/: ci.yml  cla.yml
crates/app/: Cargo.toml
crates/app/src/: gui_sample.rs  lib.rs  sample.rs
crates/app/tests/: dll_smoke.rs  end_to_end.rs  gui_gate.rs  initterm.rs  ntdll_decode_sweep.rs  tls.rs  wine_core.rs  wine_gate.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cpu.rs  driver.rs  error.rs  gui.rs  hooks.rs  lib.rs  memory.rs  pe.rs  telemetry.rs  unwind.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: alu.rs  exec.rs  lib.rs  mmx.rs  sse.rs  vex.rs  x87.rs
crates/cpu/tests/: bits32.rs  cpuid.rs  fxsave.rs  interp.rs  sse.rs  vex.rs  wow64.rs  x87.rs
crates/gui/: Cargo.toml
crates/gui/src/: cocoa.rs  lib.rs  render.rs
crates/loader/: Cargo.toml
crates/loader/src/: api_set.rs  lib.rs  manifest.rs  reader.rs  reloc.rs  resolve.rs  resources.rs  unwind.rs
crates/loader/tests/: import_resolve.rs  pe32.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: engine.rs  gen.rs  lib.rs  main.rs  rng.rs
crates/os/: Cargo.toml
crates/os/src/: api.rs  apiset.rs  boot.rs  dll.rs  exc.rs  fs.rs  gdi.rs  lib.rs  msg.rs  nls.rs  reg.rs  section.rs  server.rs  sync.rs  syscall.rs  thread.rs  time.rs  unixlib.rs  vm.rs  win.rs  win32k.rs  wow64.rs
crates/os/tests/: boot_nt.rs  crt.rs  dllmain.rs  eh_prolog.rs  exc_bridge.rs  exceptions.rs  fs.rs  fs_nt.rs  fs_search_nt.rs  gdi.rs  loader.rs  lock_atomics.rs  msg.rs  reg.rs  reg_nt.rs  section.rs  server.rs  sync.rs  sync_nt.rs  syscall.rs  teb_peb.rs  thread.rs  thread_nt.rs  time.rs  time_nt.rs  vm.rs  win.rs
docs/: CLEANROOM.md
