# Workspace root for exemu — a Windows PE (.exe) emulator for Apple Silicon.
#
# The crates are layered following Clean Architecture. Dependencies point
# strictly inward toward `core` (the domain), which itself has zero
# dependencies:
#
#   cli ─▶ app ─▶ { loader, memory, cpu, os } ─▶ core
#
# `core` defines the domain types and the abstraction traits (Memory, Cpu,
# Hooks). The outer crates provide concrete implementations. `app` wires
# them together; nothing in the inner layers knows about the outer ones.

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/loader",
    "crates/memory",
    "crates/cpu",
    "crates/os",
    "crates/gui",
    "crates/app",
    "crates/cli",
    "crates/oracle",
]

[workspace.package]
# Capability-tracked version (pre-1.0). v0.0.1 = foundation / bring-up: console
# apps + headless installer auto-drive + x64 exceptions. v0.1.0 is reserved for
# the first real interactive native window. See the release plan in the local
# knowledge base for the gate that triggers each version.
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["exemu contributors"]
repository = "https://github.com/janDuszynski/exe-emulator"

[workspace.dependencies]
exemu-core = { path = "crates/core" }
exemu-loader = { path = "crates/loader" }
exemu-memory = { path = "crates/memory" }
exemu-cpu = { path = "crates/cpu" }
exemu-os = { path = "crates/os" }
exemu-gui = { path = "crates/gui" }
exemu-app = { path = "crates/app" }

# Release profile tuned for a fast interpreter loop.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
