[package]
name = "exemu-cpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "An x86-64 instruction decoder and interpreter implementing exemu_core::Cpu."

[dependencies]
exemu-core = { workspace = true }

[dev-dependencies]
exemu-memory = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
