[package]
name = "exemu-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A minifb-backed renderer for Windows dialogs, implementing exemu_core::Gui."

[dependencies]
exemu-core = { workspace = true }
minifb = "0.27"
font8x8 = "0.3"
png = "0.17"

# The live macOS display path (W4.4): a from-scratch AppKit/Metal presenter —
# one NSWindow + CAMetalLayer per top-level HWND, blitting the guest's BGRA
# surface. objc2 default features already expose every type we use
# (NSApplication/NSWindow/NSView, CAMetalLayer, MTL{Device,Texture,CommandQueue,
# BlitCommandEncoder}); gated off non-macOS so the crate still builds elsewhere.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-metal = "0.3"
objc2-quartz-core = "0.3"
# W4.8: CoreText glyph rasterization into the DIB (real fonts, not font8x8).
# Default features already cover CGBitmapContext/CGColorSpace/CGContext and CTFont;
# the `objc2-core-graphics` feature bridges CTFontDrawGlyphs to CGContext.
objc2-core-text = { version = "0.3", features = ["objc2-core-graphics"] }
objc2-core-graphics = "0.3"
objc2-core-foundation = "0.3"
