[package]
name = "exemu-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PE64 (.exe) parser that produces the exemu domain image model."

[dependencies]
exemu-core = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
