[package]
name = "exemu-os"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Emulated Windows environment: API thunks and kernel32 implementations (exemu Hooks)."

[dependencies]
exemu-core = { workspace = true }
exemu-cpu = { workspace = true }
exemu-loader = { workspace = true }
# Stub 8×8 bitmap font for the win32k GDI paint path (W4.3): NtGdiExtTextOutW
# rasterizes ASCII glyphs into the per-window surface. A metric-only stub until
# the CoreText-backed glyph path (W4.8).
font8x8 = "0.3"

[dev-dependencies]
exemu-cpu = { workspace = true }
exemu-memory = { workspace = true }
exemu-loader = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
